k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: dev
spec:
  selector:
    app: fastapi
  ports:
    - port: 80
      targetPort: 8000
